# agentic_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN_NOTE.md  DOCKER_EXPLANATION.md  DOCKER_OVERVIEW.md  Dockerfile  FOLDER_STRUCTURE_CLAUDE_GUIDE.md  HOW_IT_WORKS.md  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.test.yml  docker-compose.yml  frontend_streamlit.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  state.py
app/agent/memory/: __init__.py  store.py
app/agent/nodes/: __init__.py  clarify.py  decide.py  direct_answer.py  evaluate_relevance.py  grounding_check.py  no_answer.py  prepare_generation.py  query_rewrite.py  retrieve.py  (+3 more)
app/api/: __init__.py
app/core/: __init__.py  circuit_breaker.py  config.py  exceptions.py  logging.py  metrics.py  schemas.py  security.py
app/embedding/: __init__.py  embedding_factory.py
app/ingest/: __init__.py  document_processor.py
app/llm/: __init__.py  llm_factory.py
app/vectorstore/: __init__.py  base.py  chroma.py  reranker.py  vector_store.py
architucture/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  project_description.txt
chroma_db/: chroma.sqlite3
data/: chat_memory.db
tests/: conftest.py  test_circuit_breaker.py  test_security.py
tests/agent/: __init__.py  conftest.py  test_graph.py  test_memory.py  test_nodes.py  test_retrieve_node.py  test_tools.py
tests/api/: conftest.py  test_chat.py  test_ingest.py
tests/embedding/: __init__.py  test_embedding_factory.py
tests/ingest/: __init__.py  test_document_processor.py
tests/llm/: __init__.py  test_llm_factory.py
tests/vectorstore/: __init__.py  conftest.py  test_chroma_adapter.py
(+20 files in other folders)
