[tool.poetry]
name = "agentic-rag"
version = "0.1.0"
description = "Production-grade Agentic RAG API — FastAPI · LangGraph · Ollama · ChromaDB"
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.111"
uvicorn = { version = ">=0.29", extras = ["standard"] }
langchain = ">=0.2"
langchain-community = ">=0.2"
langgraph = ">=0.1"
langchain-ollama = ">=0.1"
langchain-text-splitters = ">=0.2"
chromadb = ">=0.5"
pydantic = ">=2.7"
pydantic-settings = ">=2.3"
structlog = ">=24.1"
prometheus-client = ">=0.20"
opentelemetry-sdk = ">=1.24"
opentelemetry-exporter-otlp = ">=1.24"
tenacity = ">=8.3"
slowapi = ">=0.1.9"
python-multipart = ">=0.0.9"
httpx = ">=0.27"
rank-bm25 = ">=0.2.2"
sse-starlette = ">=1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"
black = ">=24.4"
mypy = ">=1.10"
pre-commit = ">=3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (Docker)",
]
addopts = "-v --tb=short"
